# rail

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  README-kr.md  README.md  go.mod  publish.sh  pubspec.yaml  pyproject.toml
.github/workflows/: go-release-gate.yml  publish.yml  python-ci.yml  release-gate.yml  release.yml  v1-release-gate.yml  v2-release-gate.yml
.harness/: README.md
.harness/actors/: evaluator.md  executor.md  generator.md  integrator.md
.harness/learning/: family_evidence_index.yaml  hardening_queue.yaml  review_queue.yaml
.harness/rubrics/: bug_fix.yaml  feature_addition.yaml  review_only.yaml  safe_refactor.yaml
.harness/rules/: allowed_commands.md  architecture_rules.md  forbidden_changes.md  project_rules.md
.harness/skills/: flutter_bug_fix.md  flutter_feature_addition.md  flutter_refactor.md
.harness/supervisor/: actor_backend.yaml  context_contract.yaml  execution_policy.yaml  policy.yaml  registry.yaml  task_router.yaml  test_target_rules.yaml
.harness/templates/: context_pack.schema.yaml  critic_report.schema.yaml  evaluation_result.schema.yaml  execution_report.schema.yaml  hardening_review_decision.schema.yaml  implementation_result.schema.yaml  integration_result.schema.yaml  (+4 more)
docs/: ARCHITECTURE-kr.md  ARCHITECTURE.md  CONVENTIONS.md  SPEC.md  tasks.md
examples/: 981park-target.md
scripts/: check_installed_wheel.py  check_package_asset_alignment.py  check_python_package_assets.py  check_release_metadata.py  install_skill.sh  migration_v0.1.0.sh  migration_v0.6.0.sh  prepare_changelog.py  python_release_gate.sh  release_gate.sh
testdata/: request_draft.json
tests/: actor_runtime_test_fixtures.py  conftest.py  integration_flow_fixtures.py  runtime_helpers.py  test_api_smoke.py  test_no_legacy_runtime_calls.py
tool/: prepare_release.sh  publish.sh  real_mode_check.sh  release_gate.sh  release_gate_common.sh  v1_release_gate.sh  v2_release_gate.sh  verify_release_formula.sh
(+384 files in other folders)
