[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rail-sdk"
version = "0.1.0"
description = "Rail harness control plane with a Python Actor Runtime."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents==0.8.4",
    "pydantic>=2.12,<3",
    "pyyaml>=6.0.2,<7",
]

[project.scripts]
rail = "rail.cli.main:main"
rail-sdk = "rail.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "ruff>=0.14,<0.15",
    "types-PyYAML>=6.0,<7",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rail = [
    "package_assets/**/*.md",
    "package_assets/**/*.yaml",
]
